@@ -1,0 +1,326 @@
+<?xml version="1.0" encoding="Windows-1252"?>
+<VisualStudioProject
+	ProjectType="Visual C++"
+	Version="9.00"
+	Name="SM_LEESA"
+	ProjectGUID="{E0CBEA84-D48A-48AA-8BDD-EB78B0507777}"
+	TargetFrameworkVersion="196613"
+	>
+	<Platforms>
+		<Platform
+			Name="Win32"
+		/>
+	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
+	<Configurations>
+		<Configuration
+			Name="Debug|Win32"
+			OutputDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			UseOfMFC="2"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+				Description="Performing registration (requires elevated priviledges on Windows Vista)..."
+				CommandLine="regsvr32 /s /c &quot;$(TargetPath)&quot;&#x0D;&#x0A;echo regsvr32 exec. time &gt; &quot;$(OutDir)\regsvr32.trg&quot;&#x0D;&#x0A;"
+				Outputs="$(OutDir)\regsvr32.trg"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="_DEBUG"
+				AdditionalIncludeDirectories=".;$(GME_ROOT)/Interfaces;$(GME_ROOT)/Gme/Interfaces"
+				MkTypLibCompatible="false"
+				TypeLibraryName=".\ComponentLib.tlb"
+				ValidateParameters="true"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories=".;$(GME_ROOT)/SDK/BON/Common;$(UDM_PATH)/include;$(LEESA_ROOT)/include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;UDM_DYNAMIC_LINKING;LEESA_FOR_UDM"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				TreatWChar_tAsBuiltInType="true"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				DebugInformationFormat="4"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"
+				Culture="1033"
+				AdditionalIncludeDirectories="$(IntDir)"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="UdmDlld.lib"
+				OutputFile="$(OutDir)/$(ProjectName)d.dll"
+				LinkIncremental="2"
+				AdditionalLibraryDirectories=".;$(UDM_PATH)/lib"
+				ModuleDefinitionFile="Component.def"
+				GenerateDebugInformation="true"
+				SubSystem="2"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release|Win32"
+			OutputDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			UseOfMFC="2"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+				Description="Performing registration (requires elevated priviledges on Windows Vista)..."
+				CommandLine="regsvr32 /s /c &quot;$(TargetPath)&quot;&#x0D;&#x0A;echo regsvr32 exec. time &gt; &quot;$(OutDir)\regsvr32.trg&quot;&#x0D;&#x0A;"
+				Outputs="$(OutDir)\regsvr32.trg"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				AdditionalIncludeDirectories=".;$(GME_ROOT)/Interfaces;$(GME_ROOT)/Gme/Interfaces"
+				MkTypLibCompatible="false"
+				TypeLibraryName=".\ComponentLib.tlb"
+				ValidateParameters="true"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="2"
+				AdditionalIncludeDirectories=".;$(GME_ROOT)/SDK/BON/Common;$(UDM_PATH)/include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;UDM_DYNAMIC_LINKING"
+				RuntimeLibrary="2"
+				TreatWChar_tAsBuiltInType="true"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
+				Culture="1033"
+				AdditionalIncludeDirectories="$(IntDir)"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="UdmDll.lib"
+				OutputFile="$(OutDir)/$(ProjectName).dll"
+				LinkIncremental="1"
+				AdditionalLibraryDirectories=".;$(UDM_PATH)/lib"
+				ModuleDefinitionFile="Component.def"
+				GenerateDebugInformation="true"
+				SubSystem="2"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+	</Configurations>
+	<References>
+	</References>
+	<Files>
+		<Filter
+			Name="Source Files"
+			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
+			>
+			<File
+				RelativePath="$(GME_ROOT)\SDK\BON\Common\ComHelp.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Component.def"
+				>
+			</File>
+			<File
+				RelativePath=".\Component.rc"
+				>
+			</File>
+			<File
+				RelativePath="$(GME_ROOT)\SDK\BON\Common\ComponentDll.cpp"
+				>
+			</File>
+			<File
+				RelativePath="$(GME_ROOT)\SDK\BON\Common\ComponentLib.idl"
+				>
+			</File>
+			<File
+				RelativePath=".\ComponentObj.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\RawComponent.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\SM.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\StdAfx.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\UdmApp.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\UdmConsole.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\UdmFormatter.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Header Files"
+			Filter="h;hpp;hxx;hm;inl"
+			>
+			<File
+				RelativePath="$(GME_ROOT)\SDK\BON\Common\ComHelp.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ComponentConfig.h"
+				>
+			</File>
+			<File
+				RelativePath="$(GME_ROOT)\SDK\BON\Common\ComponentDll.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ComponentObj.h"
+				>
+			</File>
+			<File
+				RelativePath="$(GME_ROOT)\SDK\BON\Common\GMECOM.H"
+				>
+			</File>
+			<File
+				RelativePath=".\RawComponent.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\SM.h"
+				>
+			</File>
+			<File
+				RelativePath=".\StdAfx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\string_utils.h"
+				>
+			</File>
+			<File
+				RelativePath="$(GME_ROOT)\SDK\BON\Common\targetver.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UdmApp.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UdmConfig.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UdmConsole.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UdmFormatter.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Resource Files"
+			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe"
+			>
+			<File
+				RelativePath=".\CompIcon.ico"
+				>
+			</File>
+		</Filter>
+	</Files>
+	<Globals>
+	</Globals>
+</VisualStudioProject>
